Page MenuHome GnuPG

Problem building latest master on macOS: unknown identifier LOCAL_PEERUID in command-ssh.c
Closed, ResolvedPublic

Description

It looks like just misprint, since there is a correct identifier LOCAL_PEERUUID
See agent/command-ssh.c, line 3622

Details

Version
commit #112e02e

Event Timeline

gniibe triaged this task as Normal priority.
gniibe added a subscriber: gniibe.

Thanks for testing master.
No, it's not typo, in my opinion.
The line was added as if it's LOCAL_PEERUID, but there is no such a thing in XNU, but there is LOCAL_PEERUUID which is for UUID.

Let me consider how to fix this. I suppose that macOS can't get UID (user id) of peer process.

gniibe changed the task status from Open to Testing.Jan 26 2018, 3:04 AM

I push my change to master.
Please test.

Checked - it builds fine now. Thanks!